--- a/index.html
+++ b/index.html
@@ -862,11 +862,6 @@ $(window).load(function() {
 				<a href="https://www.youtube.com/user/ConcytecPeru/featured" target="_blank">
 					<img src="images/auspiciadores/concytec.png" style="width:300px"></a>
 				</div>
-				<div class="col-md-4 ">
-				<br>
-				<a href="https://www.internetsociety.org/" target="_blank">
-					<img src="images/auspiciadores/internetsociety.png" style="width:300px"></a>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -897,25 +892,25 @@ $(window).load(function() {
 	<!-- popup -->
 
 	<div class="bts-popup " role="alert">
-	    <div class="bts-popup-container" style="width: 500px;">
-	
-	
-      
+	    	<div class="bts-popup-container" style="width: 500px;">
+	    
 			<h2 style="color: #595959;  text-align: center;center;margin-bottom: 10px;" >¡SE PARTE DE ESTE PROYECTO!</h2>
-			<p style="color: #aa68a9;  text-align: center;margin-bottom: 0px;" >Buscamos 50 mil quechuahablantes</p>
-			<p>Contribuye grabando tu voz para desarrollar el primer reconocedor de voz y el traductor del Quechua.</p>
-			
+			<p>Contribuye grabando tu voz para desarrollar el primer transcriptor del idioma Quechua.</p>
+			<div class="col-md-4 ">
+				<br>
+				<a href="https://www.internetsociety.org/" target="_blank">
+					<img src="images/auspiciadores/internetsociety.png" style="width:300px"></a>
+			</div>			
 			<div class="bts-popup-button">
-		       <a href="https://siminchikkunarayku.pe/corpus/login/?next=/corpus/" target="_blank"">
+ 		        <a href="https://play.google.com/store/apps/details?id=com.itsigned.huqariq&hl=en_US&gl=US"_blank"">
 					<button type="button"  class="popup-confirm popup-styled" aria-label="" >
-						Para grabar tu voz regístrate aquí. 
+						Para grabar tu voz, descarga HUQARIQ aquí. 
 					</button>
-				</a>
+			</a>
 			</div>
-        <a href="#0" class="bts-popup-close">X</a>
-    </div>
-	
-</div>
+        		<a href="#0" class="bts-popup-close">X</a>
+    		</div>
+	</div>
 	<!--facebook--->
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
