añadido CULTURA en el popup

--- a/index.html
+++ b/index.html
@@ -895,11 +895,10 @@ $(window).load(function() {
 	    	<div class="bts-popup-container" style="width: 500px;">
 	    
 			<h2 style="color: #595959;  text-align: center;center;margin-bottom: 10px;" >¡SE PARTE DE ESTE PROYECTO!</h2>
-			<p>Contribuye grabando tu voz para desarrollar el primer transcriptor del idioma Quechua.</p>
+			<p>Contribuye grabando tu voz para desarrollar el primer transcriptor del idioma Quechua. Agradecemos a: </p>
 			<div class="col-md-4 ">
 				<br>
-				<a href="https://www.internetsociety.org/" target="_blank">
-					<img src="images/auspiciadores/internetsociety.png" style="width:300px"></a>
+				<img src="images/auspiciadores/CULTURA.jpeg" style="width:300px"></a>
 			</div>			
 			<div class="bts-popup-button">
  		        <a href="https://play.google.com/store/apps/details?id=com.itsigned.huqariq&hl=en_US&gl=US"_blank"">
