--- a/index.html
+++ b/index.html
@@ -406,40 +406,6 @@
 						</div>
 					</div>
 				</div>	
-<!-- Rodo-->
-	
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Ayudar a las millones de personas Quechua hablantes a seguir conservando una de las lenguas más representativas de América Latina. &rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="images/person3.jpg" alt="Person"></figure>
-							<a href="https://twitter.com/rjzevallos" target="_blank">
-							<p>Rodolfo Zevallos Salazar </a><br> 
-								Universidad Nacional del Callao 
-								<span class="subtext">Investigador Asociado</span>
-							</p>
-						</div>
-					</div>
-				</div>	
-<!-- luis-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Mi tradición, mi herencia cultural, mi familia me inspiraron para desarrollar la propuesta que ahora es la iniciativa SIMINCHIKKUNARAYKU. Estoy convencido que podemos convertir en poliglotas a todo los peruanos.&rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="images/person1.jpg" alt="Person"></figure>
-							<a href="https://www.youtube.com/channel/UCtr39nRxoLgf6JFEIuUykkg" target="_blank">
-							<p>Atuq Kamachikuq </a><br> 
-								Pontificia Universidad Católica del Perú
-								<span class="subtext">Investigador Principal</span>
-							</p>
-						</div>
-					</div>
-				</div>
-
 
 
 <!-- ronald-->
@@ -500,9 +466,9 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 col-sm-6 text-center fh5co-service to-animate">
-					<a href="https://kuelap.telecom.pucp.edu.pe/corpus/login/?next=/corpus/">
+					<a href="https://play.google.com/store/apps/details?id=com.itsigned.huqariq&hl=en_US&gl=US">
 						<img src="images/icons/audio_console.png" class="icons_bottom" >
-						<h3>CORPUS QUECHUA</h3>
+						<h3>HUQARIQ</h3>
 					</a>
 					<p style="font-size: 18px;">Repositorio de audio y de transcripciones de la lengua Quechua, disponible.</p>
 				</div>
@@ -571,7 +537,7 @@
 					<h2 class="to-animate">Nosotros</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>Somos un equipo con amor por la cultura de nuestras comunidades.</h3>
+							<h3>Amamos y valoramos la cultura de nuestras comunidades.</h3>
 						</div>
 					</div>
 				</div>
@@ -606,26 +572,12 @@
 						</ul>
 					</div>
 				</div>
-<!-- rodo -->			
-				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
-					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/person3.jpg" alt="Image"></figure>
-						<h3>Rodolfo Zevallos Salazar</h3>
-						<span class="fh5co-position">Investigador Asociado</span>
-						<p>Investigador dedicado a la investigación científica y al desarrollo de software, fomentando la investigación sobre
-						Inteligencia artificial e innovación de aplicación para el cambio social en el país.</p>
-						<ul class="social social-circle">
-							<li><a href="https://twitter.com/rjzevallos" target="_blank"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</div>
-				</div>
+
 <!-- luis -->
 				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
 						<figure><img src="images/person1.jpg" alt="Image"></figure>
-						<h3>Atuq Kamachikuq</h3>
+						<h3>Luis Camacho</h3>
 						<span class="fh5co-position">Investigador Principal</span>
 						<p>Master en Ingenieria de Telecomunicaciones, Licenciado en Ingenieria Electrónica. Gestor de Proyectos experto en telecomunicaciones rurales, sistemas de información y aplicaciones de inteligencia artificial para el desarrollo humano, especialmente la promoción de idiomas en riesgo de extinción.</p>
 						<ul class="social social-circle">
