--- a/index.html
+++ b/index.html
@@ -408,24 +408,6 @@
 				</div>	
 
 
-<!-- ronald-->
-				<div class="fondo">
-					<div class="box-testimony">
-						<blockquote class="to-animate-2">
-							<p>&ldquo;Me emociona ser parte de una iniciativa que busca proveer acceso a los quechua hablantes a la vasta informacion disponible en esta era digital usando nuestra lengua ancestral y software inteligente.&rdquo;</p>
-						</blockquote>
-						<div class="author to-animate">
-							<figure><img src="images/ronald.png" alt="Person"></figure>
-							<a href="http://ronaldahmed.github.io/">
-							<p>Ronald Ahmed Cárdenas Acosta </a><br>
-								Universidad Nacional de Ingenieria
-								<span class="subtext">Investigador Asociado</span>
-							</p>
-						</div>
-					</div>
-				</div>
-				
-
 
 <!-- Reynaldo-->
 
@@ -576,7 +558,7 @@
 <!-- luis -->
 				<div class="fondo col-md-4 col-sm-6 col-xxs-12">
 					<div class="fh5co-person text-center to-animate">
-						<figure><img src="images/person1.jpg" alt="Image"></figure>
+						<figure><img src="images/Luis.png" alt="Image"></figure>
 						<h3>Luis Camacho</h3>
 						<span class="fh5co-position">Investigador Principal</span>
 						<p>Master en Ingenieria de Telecomunicaciones, Licenciado en Ingenieria Electrónica. Gestor de Proyectos experto en telecomunicaciones rurales, sistemas de información y aplicaciones de inteligencia artificial para el desarrollo humano, especialmente la promoción de idiomas en riesgo de extinción.</p>
